feat(plugin): scaffold IntelliJ plugin (JBR/preview-API workaround)
scope-tracer-analyzer is compiled with --enable-preview, which stamps every
class file with a marker that only loads on the exact compiling JDK version.
An IntelliJ plugin runs inside the IDE's own JVM (JBR, pinned to JDK 21),
so it can never load the analyzer's classes in-process - not because they
use StructuredTaskScope, but purely because of the inherited compiler flag.

- scope-tracer-analyzer: add an optional --format=json CLI flag that
  writes TraceModelJson's existing (previously HTML-only) wire format,
  so external tools can consume a parsed trace without loading analyzer
  classes.
- scope-tracer-plugin (new, Gradle, not part of the Maven reactor): a
  milestone-1 IntelliJ plugin that bundles the analyzer's executable jar,
  runs it as a subprocess against a real JDK 26, and renders the parsed
  JSON in a native tool window - proven end-to-end via `./gradlew runIde`
  (plugin loads cleanly in the sandbox, zero preview/classloading errors).